# tree-sitter-templ

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: main.yml
bindings/c/: tree-sitter-templ.h  tree-sitter-templ.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_templ/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTemplTests/: TreeSitterTemplTests.swift
corpus/: attributes.txt  basics.txt  components.txt  css.txt  expressions.txt  for.txt  go.txt  html.txt  script.txt
ftdetect/: templ.vim
lua/tree-sitter-just/: init.lua
lua/tree-sitter-templ/: init.lua
queries/: highlights.scm  injections.scm
queries/templ/: folds.scm  highlights.scm  indents.scm  structure.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: attributes.txt  components.txt  css.txt  elements.txt  expressions.txt  for.txt  go.txt  rawgo.txt  script.txt  switch.txt
