[package]
name = "tree-sitter-templ"
description = "templ grammar for the tree-sitter parsing library"
version = "2.2.0"
keywords = ["incremental", "parsing", "templ"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/vrischmann/tree-sitter-templ"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "/bindings/rust/*",
  "/grammar.js",
  "/queries/*",
  "/src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.25.1"
